--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,12 @@ code {
 h1 { 
   text-align: center;
 }
+footer {
+  text-align: center;
+  font-size: 20px;
+}
 
+a {
+  color: darkmagenta;
+}
 
